-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
Environment:
Mac OSX 10.11.4 with Xcode 7.3
-
b122
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228582 | openjdk8u232 | Gerard Ziemski | P3 | Resolved | Fixed | b01 |
| JDK-8248943 | 8u271 | David Buck | P3 | Resolved | Fixed | b01 |
| JDK-8240329 | 8u261 | David Buck | P3 | Resolved | Fixed | b01 |
| JDK-8244883 | 8u251 | David Buck | P3 | Resolved | Fixed | b34 |
| JDK-8251621 | emb-8u271 | David Buck | P3 | Resolved | Fixed | team |
| JDK-8246880 | emb-8u261 | David Buck | P3 | Resolved | Fixed | team |
Generating precompiled header precompiled.hpp.pch
In file included from <built-in>:332:
In file included from <command line>:22:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/precompiled/precompiled.hpp:30:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/asm/assembler.inline.hpp:31:
In file included from /Users/morris/hotspot/hs9/hotspot/src/cpu/x86/vm/assembler_x86.inline.hpp:30:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/code/codeCache.hpp:28:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/code/codeBlob.hpp:30:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/runtime/frame.hpp:28:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/method.hpp:33:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/constantPool.hpp:32:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/typeArrayOop.hpp:29:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/typeArrayKlass.hpp:29:
In file included from /Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/arrayKlass.hpp:29:
/Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/klass.hpp:327:58: error: shifting a negative signed value is undefined [-Werror,-Wshift-negative-value]
return (juint)lh >= (juint)(_lh_array_tag_type_value << _lh_array_tag_shift);
~~~~~~~~~~~~~~~~~~~~~~~~ ^
/Users/morris/hotspot/hs9/hotspot/src/share/vm/oops/klass.hpp:331:55: error: shifting a negative signed value is undefined [-Werror,-Wshift-negative-value]
return (jint)lh < (jint)(_lh_array_tag_type_value << _lh_array_tag_shift);
~~~~~~~~~~~~~~~~~~~~~~~~ ^
2 errors generated.
- backported by
-
JDK-8228582 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
-
JDK-8240329 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
-
JDK-8244883 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
-
JDK-8246880 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
-
JDK-8248943 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
-
JDK-8251621 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
- duplicates
-
JDK-8156076 support clang 7.3 and fix warnings about shifting a negative signed value
-
- Closed
-
- relates to
-
JDK-8240341 remove unneeded casts from 8u backport of JDK-8152856
-
- Open
-
-
JDK-8189219 [MVT] Build fails with "shifting a negative signed value is undefined" on Mac
-
- Resolved
-
-
JDK-8157758 JDK9 does not compile on Linux with GCC 6.1 because left-shifting a negative number has undefined behavior
-
- Resolved
-
-
JDK-8157476 -Wlogical-not-parentheses warnings in JRSUIConstantSync.m
-
- Resolved
-
-
JDK-8152899 Xcode 7.3 problems
-
- Closed
-
-
JDK-8153301 Why is layout_helper_is_objArray using _lh_array_tag_type_value, not _lh_array_tag_obj_value?
-
- Closed
-
-
JDK-8153116 Style Guide should not require enum for defining constants in class definitions
-
- Resolved
-