8152856: Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X

Implement _lh_array_tag_type_value as const, not enum.

Reviewed-by: vlivanov, minqi